[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/HuePicker/HSVPickerButton.gd" type="Script" id=1]
[ext_resource path="res://addons/HuePicker/icon_button_smol.png" type="Texture" id=2]
[ext_resource path="res://addons/HuePicker/HuePicker.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/HuePicker/checkerboard.png" type="Texture" id=4]

[node name="HSVPickerButton" type="Button" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_editor_icon": ExtResource( 2 )
}
color = Color( 1, 1, 1, 1 )
enabled = true

[node name="PopupPanel" type="PopupPanel" parent="." index="0"]

visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -312.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
_sections_unfolded = [ "Anchor", "Rect" ]
__meta__ = {
"_edit_group_": true
}

[node name="HuePicker" parent="PopupPanel" index="0" instance=ExtResource( 3 )]

anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 8.0
margin_right = -16.0
margin_bottom = -8.0

[node name="Label" type="Label" parent="PopupPanel" index="1"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -38.0
margin_right = -8.0
margin_bottom = -8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "R: 255.0
G: 255.0
B: 255.0"
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="TextureRect" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="ColorRect" type="ColorRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 16
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Margin", "Mouse", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="." to="." method="_on_HSVPickerButton_pressed"]

[connection signal="about_to_show" from="PopupPanel" to="." method="_on_PopupPanel_about_to_show"]

[connection signal="popup_hide" from="PopupPanel" to="." method="_on_PopupPanel_popup_hide"]


